# bitbucket-mcp

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml  sonar-project.properties
.superpowers/sdd/: task-4-report.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  OAUTH.md  TROUBLESHOOTING.md
docs/specs/: 2026-07-23-bitbucket-oauth-design.md
docs/superpowers/plans/: 2026-07-03-bitbucket-mcp-mvp.md
docs/superpowers/specs/: 2026-07-03-bitbucket-mcp-design.md
src/bitbucket_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  credentials.py  errors.py  oauth.py  pagination.py  server.py
src/bitbucket_mcp/models/: __init__.py
src/bitbucket_mcp/toolsets/: __init__.py  _common.py  context.py  issues.py  pipelines.py  pull_requests.py  raw_api.py  repos.py  users.py
tests/: conftest.py  test_auth.py  test_auth_cli.py  test_client.py  test_config.py  test_credentials.py  test_errors.py  test_main.py  test_oauth.py  test_package.py  test_pagination.py  test_server.py  test_server_login_tool.py
tests/toolsets/: test_common.py  test_context.py  test_issues.py  test_pipelines.py  test_pull_requests.py  test_raw_api.py  test_repos.py  test_users.py
